bugfix: feature cover images stretched on iPad devices

--- a/app/assets/stylesheets/bloak/application.css
+++ b/app/assets/stylesheets/bloak/application.css
@@ -80,5 +80,5 @@ input[type="date"] {
 }
 
 .feature-cover-image {
-  height: 190px;
+  max-height: 250px;
 }
